$Id$                       -*-text-*-


**** 1.45 [unreleased]

	Resync with IANA DNS Parameters registry.
	Resync with IANA DNSSEC Algorithm Numbers registry.
	Resync with IANA DS Digest Algorithms registry.
	Add support for EDNS CO flag.


**** 1.44 Feb 15, 2024

	Simplify testing of resolver error paths.
	Prevent read beyond end of RDATA in corrupt SVCB RR.


**** 1.43 Jan 26, 2024

	Update b.root-servers.net addresses in resolver hints.
	Improve accuracy and completeness of dependency metadata.
	Nameserver: hangs on persistent TCP connection (Windows).
	IPSECKEY: leave gateway undefined for gatetype 0.
	Remove remaining support for GOST.

Fix rt.cpan.org #151240
	Nameserver.pm: DoS vulnerability in TCP handling

Fix rt.cpan.org #151232
	Net::DNS::Resolver::new hangs for 150s on Win32 with no active DNS

Fix rt.cpan.org #151075
	Bug in Net::DNS::Resolver::Recurse::_referral

Fix rt.cpan.org #151074
	Deep recursion in Net::DNS::Resolver::Recurse


**** 1.42 Dec 24, 2023

Fix rt.cpan.org #150695
	Hang in Net::DNS::Nameserver on Windows


**** 1.41 Nov 28, 2023

	Accept inbound Ethernet "Jumbo" UDP packet.
	Facilitate decoding of mDNS/SD packets with compressed RDATA.
	Update Parameters.pm to resync with IANA registry.

Fix rt.cpan.org #150550
	Error trying to use Socket macro SO_REUSEPORT in Windows


**** 1.40 Aug 30, 2023

	Add support for SVCB dohpath and ohttp parameters.
	More robust test of bgbusy() SpamAssassin workaround.

Fix rt.cpan.org #149456
	t/05-SOA.t test fails in 2038

Fix rt.cpan.org #149280
	Deep recursion on subroutine "Net::DNS::Resolver::Recurse::_recurse"


**** 1.39 Jun 1, 2023

Fix rt.cpan.org #148340
	udpsize uninitialized value


**** 1.38 May 9, 2023

	Mailbox.pm: Improve robustness of address parsing.
	Deprecate packet->edns->size() method.
	Deprecate rdatastr() historical RR subtype method.
	Major overhaul of pre-installation test scripts.
	Add new t/TestToolkit.pm
	Refactor socket code and control structure in