@@ -128,6 +128,6 @@ DEALINGS IN THE SOFTWARE.
 =head1 SEE ALSO
 
 L<perl> L<Net::DNS> L<Net::DNS::RR>
-L<RFC1035(3.4.1)|https://tools.ietf.org/html/rfc1035>
+L<RFC1035(3.4.1)|https://iana.org/go/rfc1035#section-3.4.1>
 
 =cut
