@@ -433,10 +433,10 @@ DEALINGS IN THE SOFTWARE.
 =head1 SEE ALSO
 
 L<perl> L<Net::DNS> L<Net::DNS::RR>
-L<RFC4034|https://tools.ietf.org/html/rfc4034>
+L<RFC4034(2)|https://iana.org/go/rfc4034#section-2>
 
-L<DNSKEY Flags|http://www.iana.org/assignments/dnskey-flags>
+L<DNSKEY Flags|https://www.iana.org/assignments/dnskey-flags>
 
-L<Algorithm Numbers|http://www.iana.org/assignments/dns-sec-alg-numbers>
+L<Algorithm Numbers|https://iana.org/assignments/dns-sec-alg-numbers>
 
 =cut
