@@ -145,6 +145,6 @@ DEALINGS IN THE SOFTWARE.
 =head1 SEE ALSO
 
 L<perl> L<Net::DNS> L<Net::DNS::RR>
-L<RFC1183(3.3)|https://tools.ietf.org/html/rfc1183>
+L<RFC1183(3.3)|https://iana.org/go/rfc1183#section-3.3>
 
 =cut
